# iot-water-monitoring-system

./: .gitignore  requirements.txt
iot_water_monitoring_system/: .gitignore  README.md  anomaly_queue.py  dummy_data.py  iot_server.py  manage.py  mqtt_server.py  pyproject.toml  requirements.txt
iot_water_monitoring_system/iot_water_monitoring_system/: asgi.py  settings.py  urls.py  wsgi.py
iot_water_monitoring_system/sensors/: admin.py  analysis.py  apps.py  consumers.py  models.py  mqtt_client.py  urls.py  views.py
iot_water_monitoring_system/sensors/migrations/: 0001_initial.py
iot_water_monitoring_system/sensors/templates/sensors/: analysis.html  dashboard.html  index.html
