[tool.poetry]
name = "iot-water-monitoring-system"
version = "0.1.0"
description = ""
authors = ["Dhruv Patel <pateldhruv130401@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.3"
paho-mqtt = "<2.0"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
plotly = "^5.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
